--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: ftp-quaiantiqueth1bz.alwaysdata.net
+        server: ssh-quaiantiqueth1bz.alwaysdata.net 
         username: quaiantiqueth1bz
         password: ${{ secrets.ftp_password }}
         server-dir: /www/
