--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-on : push
+on: push
 name: 🚀 Deploy website on push
 jobs:
   web-deploy:
@@ -7,18 +7,25 @@ jobs:
     steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v3
-   
+
+    - name: 📂 Install dependencies
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'  
+
+    - name: 📂 Install npm dependencies
+      run: npm install
+    
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: ssh-quaiantiqueth1bz.alwaysdata.net 
+        server: ftp-quaiantiqueth1bz.alwaysdata.net
         username: quaiantiqueth1bz
-        password: ${{ secrets.ftp_password }}
-        server-dir: /www/
+        password : ${{ secrets.ftp_password }}
         exclude: |
           **/.git*
           **/.git*/**
           **/node_modules/bootstrap/scss/**
           **/node_modules/bootstrap/js/**
           **/node_modules/bootstrap-icons/icons/**  
-        
+        server-dir: /www/
