--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,26 +6,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: 🚚 Get latest code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
-    - name: 📂 Install dependencies
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'  
-
-    - name: 📂 Install npm dependencies
-      run: npm install
-    
     - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
         server: ftp-quaiantiqueth1bz.alwaysdata.net
         username: quaiantiqueth1bz
-        password : ${{ secrets.ftp_password }}
+        password: ${{ secrets.ftp_password }}
+        protocol: ftps
+        port: 990 # todo replace with your web hosts ftps port
+
         exclude: |
           **/.git*
           **/.git*/**
-          **/node_modules/bootstrap/scss/**
-          **/node_modules/bootstrap/js/**
-          **/node_modules/bootstrap-icons/icons/**  
-        server-dir: /www/
+          **/node_modules/**
+          fileToExclude.txt
