--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,14 @@ jobs:
     - name: 🚚 Get latest code
       uses: actions/checkout@v4
 
+    - name: 📂 Install dependencies
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'  
+
+    - name: 📂 Install npm dependencies
+      run: npm install
+
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
@@ -16,9 +24,10 @@ jobs:
         password: ${{ secrets.ftp_password }}
         protocol: ftps
         port: 990 # todo replace with your web hosts ftps port
-
+        server-dir: /www/
         exclude: |
           **/.git*
           **/.git*/**
-          **/node_modules/**
-          fileToExclude.txt
+          **/node_modules/bootstrap/scss/**
+          **/node_modules/bootstrap/js/**
+          **/node_modules/bootstrap-icons/icons/** 
