--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         server: ssh-quaiantiqueth1bz.alwaysdata.net
         username: quaiantiqueth1bz
-        password: ${{ secrets.ftp_password }}
+        password: ${{ secrets.FTP-PASSWORD }}
         protocol: ftps
         port: 22 # todo replace with your web hosts ftps port
         server-dir: /www/
