--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,11 +19,12 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: ftp-quaiantiqueth1bz.alwaysdata.net
-        username: quaiantiqueth1bz
+        FTP_SERVER: ${{ secrets.ftp_server }}
+        FTP_USERNAME: ${{ secrets.ftp_username }}
         password : ${{ secrets.ftp_password }}
-        protocol: ftps
-        port: 990
+        protocol: sftp
+        port: 22
+        ARGS: --verbose
         exclude: |
           **/.git*
           **/.git*/**
