--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         password : ${{ secrets.ftp_password }}
         protocol: sftp
         port: 22
-        args: --verbose
+        timeout: 60000
         exclude: |
           **/.git*
           **/.git*/**
