--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         server: ${{ secrets.ftp_server }}
         username: ${{ secrets.ftp_username }}
         password : ${{ secrets.ftp_password }}
-        protocol: sftp
+        protocol: ftps
         port: 22
         timeout: 60000
         exclude: |
