--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,12 +19,9 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: ${{ secrets.ftp_server }}
-        username: ${{ secrets.ftp_username }}
+        server: ssh-quaiantiqueth1bz.alwaysdata.net
+        username: quaiantiqueth1bz
         password : ${{ secrets.ftp_password }}
-        protocol: ftps
-        port: 22
-        timeout: 60000
         exclude: |
           **/.git*
           **/.git*/**
