--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
         password : ${{ secrets.ftp_password }}
         protocol: ftps
         port: 990
+        timeout: 60000
         exclude: |
           **/.git*
           **/.git*/**
